Fix aside overflow

--- a/web/styles/project/_alert.scss
+++ b/web/styles/project/_alert.scss
@@ -8,7 +8,6 @@
     .aside {
         margin-top: 60px;
         height: calc(100% - 60px);
-        overflow-y: auto;
     }
     &.hide {
         .navbar {
